--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <div class="skill-row">
           <img class="computer" src="images/support.png" alt="computer-image">
           <h3>PC Technician</h3>
-          <p>Since the ripe age of 12 years old, I began building and working on my own PCs. I built my first PC which taught me a lot about PCs, from blue-screens to hardware failure. I've built up a knowledge base and working theory to screwdriver my way through problems.</p>
+          <p>Since I was 12 years old, I began building and working on my own PCs. I built my first PC which taught me a lot about PCs, from blue-screens to hardware failure. I've built up a knowledge base and working theory to screwdriver my way through problems.</p>
         </div>
         <div class="skill-row2">
           <img class="code" src="images/code.png" alt="code-image">
           <h3>Programming</h3>
-          <p>We all create and make art in our own ways. For some, it's a paintbrush. For me it's a keyboard.</p>
+          <p>We all create and make art in our own ways. For some, it's a paintbrush. For me, it's a keyboard.</p>
         </div>
       </div>
       <hr>
