--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <p class="copyright">© 2020 Seth Templet.</p>
+      <p class="copyright">© 2020 Seth</p>
     </div>
 
   </body>
