--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name=viewport content="width=device-width, initial-scale=1">
+    <meta name=description content="A personal site of mine to show off my current projects and credentials for future employers and for those who are curious.">
+    <meta name=title content="Seth Templet">
+    <meta name=author content="Seth Templet">
     <title>Seth Templet</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.ico">
