--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
           <img class="code" src="images/code.png" alt="code-image">
           
           <h3>Programming</h3>
-          <p>We all create and make art in our own ways. For some, it's a paintbrush. For me, it's a keyboard. I like to learn and create projects in my free time. I'm also competitively programming on CodeWars. In which, I am in the top 10% of programmers.</p>
+          <p>We all create and make art in our own ways. For some, it's a paintbrush. For me, it's a keyboard. I like to learn languages and create projects in my free time. I'm also competitively programming on CodeWars. In which, I am in the top 10% of programmers.</p>
+        </div>
           <img src="https://www.codewars.com/users/zetta0/badges/large" alt="codewars">
           <p>These are some of the programming languages that I know:</p>
-        </div>
-      </div>
+          <img class="lang" src="images/python.png" alt="python">
+          <img class="lang" src="images/javascript.png" alt="javascript">
+          <img class="lang" src="images/dart.png" alt="dart">
       <hr>
 
       
