--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <h3>Programming</h3>
           <p>We all create and make art in our own ways. For some, it's a paintbrush. For me, it's a keyboard. I like to learn languages and create projects in my free time. I'm also competitively programming on CodeWars. In which, I am in the top 10% of programmers.</p>
         </div>
-          <img src="https://www.codewars.com/users/zetta0/badges/large" alt="codewars">
+           <a href="https://www.codewars.com/users/zetta0"><img src="https://www.codewars.com/users/zetta0/badges/large" alt="codewars"></a>
           <p>These are some of the programming languages that I know:</p>
           <img class="lang" src="images/python.png" alt="python">
           <img class="lang" src="images/javascript.png" alt="javascript">
