--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2>My Skills.</h2>
         <div class="skill-row">
           <img class="computer" src="images/support.png" alt="computer-image">
-          <h3>Information technology</h3>
+          <h3>Information Technology</h3>
           <p>Since I was young I was always interested in computing, I love to use cutting edge technology and to learn more about it. I've earned a few certifications to validate my skills: </p>
           <img class='cert' src="images/a.png" alt="A+">
           <img class='cert' src="images/net.png" alt="Network+">
