--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name=description content="A personal site of mine to show off my current projects and credentials for future employers and for those who are curious.">
+    <meta name=description content="Seth Templet. Programmer and Operations specialist based in New Orelans, LA. Free for work and app ideas!">
     <meta name=title content="Seth Templet">
     <meta name=author content="Seth Templet">
     <title>Seth Templet</title>
