--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
       <h1>I'm Seth.</h1>
-      <h2><strong>an IT specialist and <span class="pro">pro</span>grammer.</strong></h2>
+      <h2><strong>a sysadmin and <span class="pro">pro</span>grammer.</strong></h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
       <img src="images/mountain.png" alt="mountain-img">
     </div>
@@ -41,38 +41,14 @@
         <div class="skill-row2">
           <img class="code" src="images/code.png" alt="code-image">
           <h3>Programming</h3>
-          <p>Programming let's me use my problem solving skills to the next level. I really like web development and mobile development. Some of my favorite languages:</p>
-          <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img src="images/javascript.png" alt="" style="width:300px;height:300px;">
-              </div>
-              <div class="flip-card-back">
-                <p>Javascript</p>
-                <p>I like to use JS for web dev, mobile dev, and back end.</p>
-              </div>
-            </div>
+          <p>I've been programming for years and have a fascination with learning new languages and frameworks. Below are some of my projects.</p>
+              
+          <div class="projects">
+            <h3>My resume website inspired from the command line:</h3>
+            <a href="https://sethtemplet.dev/resume">
+            <img class="cli-resume"src="images/resume.png" alt="">
+            </a>
           </div>
-          <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img src="images/python.png" alt="" style="width:300px;height:300px;">
-              </div>
-              <div class="flip-card-back">
-                <p>Python</p>
-                <p>Python is great for almost everything, I love this lang for automation tools!</p>
-              </div>
-            </div>
-          </div>
-          <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img src="images/dart.png" alt="" style="width:300px;height:300px;">
-              </div>
-              <div class="flip-card-back">
-                <p>Dart</p>
-                <p>Dart and Flutter is my go to for iOS and Android development.</p>
-              </div>
             </div>
           </div>
         </div>
@@ -89,7 +65,7 @@
 
     <div class="bottom-container">
       <a class="footer-link" href="https://linkedin.com/in/seth-templet">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://twitter.com/zebbybobebby">Twitter</a>
       <p class="copyright">© 2020 Seth</p>
     </div>
     <script src="index.js"></script>
