--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://linkedin.com/in/seth-templet">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/zebbybobebby">Twitter</a>
+      <script src="https://tryhackme.com/badge/427759"></script>
       <p class="copyright">© 2020 Seth</p>
     </div>
     <script src="index.js"></script>
