--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
           <img class="computer" src="images/support.png" alt="computer-image">
           <h3>Information Technology</h3>
           <p>Since I was young I was always interested in computing, I love to use cutting edge technology and to learn more about it. I've earned a few certifications to validate my skills: </p>
-          <img class='cert' src="images/a.png" alt="A+">
-          <img class='cert' src="images/net.png" alt="Network+">
-          <img class='cert' src="images/sec.png" alt="Security+">
-          <img class='cert' src="images/csis.jpg" alt="CSIS">
+          <ul class="center-cert" style="list-style-type: none;">
+          <li style="padding-top: 90px;"><img class='cert' src="images/a.png" alt="A+"></li>
+          <li><img class='cert' src="images/net.png" alt="Network+"></li>
+          <li><img class='cert' src="images/sec.png" alt="Security+"></li>
+          <li><img class='cert' src="images/csis.jpg" alt="CSIS"></li>
+          </ul>
         </div>
         <div class="skill-row2">
           <img class="code" src="images/code.png" alt="code-image">
@@ -56,17 +58,18 @@
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Currently Looking For Work!</h3>
-        <p class="contact-message">Feel free to contact me about problems or even the latest PC hardware!</p>
+        <p class="contact-message">Below are a list of my socials, feel free to reach out!</p>
         <a class="btn" href="mailto:sethtempbsns@outlook.com">CONTACT ME</a>
       </div>
     </div>
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://linkedin.com/in/seth-templet">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/zebbybobebby">Twitter</a>
-      <script src="https://tryhackme.com/badge/427759"></script>
+      <ul style="list-style-type: none;">
+      <li><a class="footer-link" href="https://linkedin.com/in/seth-templet">LinkedIn</a></li>
+      <li><a class="footer-link" href="https://twitter.com/zebbybobebby">Twitter</a></li>
+      <li><script src="https://tryhackme.com/badge/427759"></script></li>
+      </ul>
       <p class="copyright">© 2020 Seth</p>
     </div>
     <script src="index.js"></script>
