--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name=description content="Seth Templet. Programmer and Operations specialist based in New Orleans, LA. Free for work and app ideas!">
+    <meta name=description content="Seth Templet. Cybersecurity Geek">
     <meta name=title content="Seth Templet">
     <meta name=author content="Seth Templet">
     <title>Seth Templet</title>
@@ -11,40 +11,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Sacramento&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-      <h1>I'm Seth.</h1>
-      <h2><strong>a sysadmin and <span class="pro">pro</span>grammer.</strong></h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-      <img src="images/mountain.png" alt="mountain-img">
+    <div class="top-container" style="background-image: url(images/stars.jpg); background-position: 50% 0px; padding-bottom: 100px;">
+  <div class="container">
+  <span style="color: white;">Seth Templet</span>
+  <div class="stack" style="--stacks: 3;">
+    <span style="--index: 0; color: white;">Cybersecurity</span>
+    <span style="--index: 1; color: white;">Cybersecurity</span>
+    <span style="--index: 2; color: white;">Cybersecurity</span>
+  </div>
+  <span style="color: white;">Penetration Testing & Blue Team Defender</span>
+</div>
     </div>
     <div class="middle-container">
       <div class="profile">
         <img class='seth' src="images/seth.png" alt="me">
         <h2>Hello.</h2>
-        <p class="intro">“Living is a process of developing oneself. Without experiencing pain from disconcerting periods of our lives, we would
-        be different person, perhaps a lesser person.”
-        ― Kilroy J. Oldster</p>
+        <p class="intro">This is currently a work in progress.</p>
       </div>
       <hr>
       <div class="skills">
-        <h2>My Skills.</h2>
-        <div class="skill-row">
-          <img class="computer" src="images/support.png" alt="computer-image">
-          <h3>Information Technology</h3>
-          <p>Since I was young I was always interested in computing, I love to use cutting edge technology and to learn more about it. I've earned a few certifications to validate my skills: </p>
-          <ul class="center-cert" style="list-style-type: none;">
-          <li style="padding-top: 200px;"><img class='cert' src="images/a.png" alt="A+"></li>
-          <li><img class='cert' src="images/net.png" alt="Network+"></li>
-          <li><img class='cert' src="images/sec.png" alt="Security+"></li>
-          <li><img class='cert' src="images/csis.jpg" alt="CSIS"></li>
-          </ul>
-        </div>
-        <div class="skill-row2">
-          <img class="code" src="images/code.png" alt="code-image">
-          <h3>Programming</h3>
-          <p>I've been programming for years and have a fascination with learning new languages and frameworks. Below are some of my projects.</p>
-              
           <div class="projects">
             <h3>My resume website inspired from the command line:</h3>
             <a href="https://sethtemplet.dev/resume">
@@ -70,7 +55,7 @@
       <li><a class="footer-link" href="https://twitter.com/zebbybobebby">Twitter</a></li>
       <li><script src="https://tryhackme.com/badge/427759"></script></li>
       </ul>
-      <p class="copyright">© 2020 Seth</p>
+      <p class="copyright">© 2022 Seth</p>
     </div>
     <script src="index.js"></script>
   </body>
