--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name=title content="Seth Templet">
     <meta name=author content="Seth Templet">
     <title>Seth Templet</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Sacramento&display=swap" rel="stylesheet">
@@ -26,12 +28,18 @@
       <div class="profile">
         <img class='seth' src="images/seth.png" alt="me">
         <h2>Hello.</h2>
-        <p class="intro">This is currently a work in progress.</p>
+        <p class="intro">I have an extreme passion for Cybersecurity, automation, and food.</p>
+        <hr>
+        <h2>Some of my skills:</h2>
+       <img src="images/command-window.png" class="skills" alt="terminal">
+       <img src="images/cyber-security.png" class="skills" alt="cyber-security">
+       <img src="images/python.png"  class="skills"alt="python">
+       <img src="images/hacking.png" class="skills" alt="hacking">
       </div>
       <hr>
-      <div class="skills">
+      <div>
           <div class="projects">
-            <h3>My resume website inspired from the command line:</h3>
+            <h3>My portfolio website inspired by the terminal:</h3>
             <a href="https://sethtemplet.dev/resume">
             <img class="cli-resume"src="images/resume.png" alt="">
             </a>
@@ -44,7 +52,6 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <p class="contact-message">Below are a list of my socials, feel free to reach out!</p>
-        <a class="btn" href="mailto:sethtempbsns@outlook.com">CONTACT ME</a>
       </div>
     </div>
 
