--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <p class="intro">I have an extreme passion for Cybersecurity, automation, and food.</p>
         <hr>
         <h2>Some of my skills:</h2>
-       <img src="images/command-window.png" class="skills" alt="terminal">
-       <img src="images/cyber-security.png" class="skills" alt="cyber-security">
-       <img src="images/python.png"  class="skills"alt="python">
-       <img src="images/hacking.png" class="skills" alt="hacking">
+       <img src="images/command-window.png" class="skills" style="width: 75px" alt="terminal">
+       <img src="images/cyber-security.png" class="skills" style="width: 75px" alt="cyber-security">
+       <img src="images/python.png"  class="skills" style="width: 75px" alt="python">
+       <img src="images/hacking.png" class="skills" style="width: 75px" alt="hacking">
       </div>
       <hr>
       <div>
