--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Sacramento&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="top-container" style="background-image: url(images/stars.jpg); background-position: 50% 0px; padding-bottom: 100px;">
+    <div class="top-container" style="background-image: url(images/stars.jpg); background-position: 50% 0px; padding-bottom: 100px; border-bottom-left-radius: 20%;
+  border-bottom-right-radius: 20%;">
   <div class="container">
   <span style="color: white;">Seth Templet</span>
   <div class="stack" style="--stacks: 3;">
