--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="bottom-container">
       <ul style="list-style-type: none;">
       <li><a class="footer-link" href="https://linkedin.com/in/seth-templet">LinkedIn</a></li>
-      <li><a class="footer-link" href="https://twitter.com/zebbybobebby">Twitter</a></li>
+      <li><a class="footer-link" href="https://twitter.com/">Twitter</a></li>
       <li><script src="https://tryhackme.com/badge/427759"></script></li>
       </ul>
       <p class="copyright">© 2022 Seth</p>
